fix lesson20 overlap on section title for SP

--- a/op-restaurant/lesson-20/main.scss
+++ b/op-restaurant/lesson-20/main.scss
@@ -82,6 +82,9 @@ body {
     font-family: $title-font !important;
     line-height: clamp(12px, 2.8vw, 22px);
     margin: 0 auto;
+    @media screen and (max-width: 428px) {
+      margin-left: 10px;
+    }
   }
   .section {
     position: absolute;
@@ -105,7 +108,9 @@ body {
     }
   }
   ul {
-    margin-left: -0.5em;
+    @media screen and (min-width: 428px) {
+      margin-left: -0.5em;
+    }
     padding: 0;
 
     li {
